<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <!-- The main content view -->
    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.miodragmilosevic.roomtest.startattack.StartAttackActivity">


        <!-- Load the toolbar here -->
        <include
            android:id="@+id/toolbar_container"
            layout="@layout/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_save_epy_attack"
            android:layout_below="@id/toolbar_container">

            <Button
                android:id="@+id/attack_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/btn_start_attack" />

            <TextView
                android:id="@+id/attack_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/attack_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:id="@+id/add_attack_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="48dp"
                android:orientation="vertical">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/add_attack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/azul"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/ic_add_white" />
                <TextView
                    android:textColor="@color/gray_blue"
                    android:layout_width="wrap_content"
                    android:textSize="14dp"
                    android:textAllCaps="true"
                    android:layout_marginTop="16dp"
                    android:text="@string/title_manual_insert"
                    android:fontFamily="@font/montserrat_medium_fonts"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/reminder_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_margin="48dp"
                android:orientation="vertical">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:backgroundTint="@color/aqual_marine_2"
                    app:srcCompat="@drawable/ic_alarm_white" />
                <TextView
                    android:textColor="@color/gray_blue"
                    android:layout_width="wrap_content"
                    android:textSize="14dp"
                    android:textAllCaps="true"
                    android:layout_marginTop="16dp"
                    android:text="@string/title_reminder"
                    android:fontFamily="@font/montserrat_medium_fonts"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@id/btn_save_epy_attack"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_button_height"
            style="@style/BottomButton"
            android:layout_alignParentBottom="true"
            android:text="@string/btn_save_epi_attack"/>
    </RelativeLayout>
    <!-- The navigation drawer -->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:layout_gravity="start"
        android:background="@color/windows_blue"
        android:fitsSystemWindows="true"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@color/white"
        android:theme="@style/AppThemeOverlayNavigationDrawer"
        app:menu="@menu/drawer_menu" />


    <!-- Side navigation drawer UI -->
    <!--<ListView-->
    <!--android:id="@+id/navList"-->
    <!--android:layout_width="200dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_gravity="left|start"-->
    <!--android:background="#ffeeeeee"/>-->
</android.support.v4.widget.DrawerLayout>